--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,7 +84,9 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xtree": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "condition_variable": "cpp",
+        "mutex": "cpp"
     },
     
 }
