Well, It renders cubes now. ...and shoes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,5 +88,11 @@
         "condition_variable": "cpp",
         "mutex": "cpp"
     },
+    "cSpell.words": [
+        "CHARACTERMANAGER",
+        "glew",
+        "GLEW",
+        "antialiasing"
+    ],
     
 }
