--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,14 +14,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 # determine if we are building on windows
 if(WIN32)
     set(FREETYPE_INCLUDE_DIRS "C:/Users/Andrew/Documents/freetype/include")
-    set(FREETYPE_LIBRARY "C:/Users/Andrew/Documents/freetype/release static/vs2015-2022/win64/freetype.lib" "C:/Users/Andrew/Documents/freetype/release static/vs2015-2022/win32/freetype.lib")
+    set(FREETYPE_LIBRARY "C:/Users/Andrew/Documents/freetype/release static/vs2015-2022/win32/freetype.lib")
+    set(GLEW_INCLUDE_DIRS "C:/Users/Andrew/Documents/glew-2.1.0/include")
+    set(GLEW_LIBRARIES "C:/Users/Andrew/Documents/glew-2.1.0/lib/Release/Win32/glew32.lib")
+else()
+    find_package(GLEW REQUIRED)
 endif()
 
 find_package(Freetype REQUIRED)
 
-find_package(OpenGL REQUIRED)
-
-find_package(GLEW REQUIRED)
+# find_package(GLEW REQUIRED)
 
 include(FetchContent)
 FetchContent_Declare(SFML
@@ -39,6 +41,7 @@ set(MESHES_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/meshes")
 
 # Create the destination directory
 file(MAKE_DIRECTORY ${SHADER_DEST_DIR})
+file(MAKE_DIRECTORY ${MESHES_DEST_DIR})
 
 # Add executable
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/**/*.cpp" "src/**/**/*.cpp")
@@ -47,10 +50,14 @@ add_executable(CubeCoreProject ${SOURCES})
 target_link_libraries(CubeCoreProject PRIVATE sfml-graphics sfml-audio ${ALSA_LIBRARIES} ${FREETYPE_LIBRARY} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
 target_compile_features(CubeCoreProject PRIVATE cxx_std_17)
 
-install(TARGETS CubeCoreProject)
+
 
 # Include directories
-target_include_directories(CubeCoreProject PRIVATE ${PROJECT_SOURCE_DIR}/src/libs ${FREETYPE_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS})
+if(WIN32)
+    target_include_directories(CubeCoreProject PRIVATE ${PROJECT_SOURCE_DIR}/src/libs ${FREETYPE_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${SFML_INCLUDE_DIR} "C:/Users/Andrew/Documents/glm-1.0.1-light")
+else()
+    target_include_directories(CubeCoreProject PRIVATE ${PROJECT_SOURCE_DIR}/src/libs ${FREETYPE_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${SFML_INCLUDE_DIR})
+endif()
 
 # Add a custom command to copy the shaders directory
 add_custom_command(
@@ -69,3 +76,16 @@ add_custom_command(
     ${MESHES_DEST_DIR}
     COMMENT "Copying meshess to output directory"
 )
+
+# if win32 move executable up one folder
+# if(WIN32)
+#     add_custom_command(
+#         TARGET CubeCoreProject POST_BUILD
+#         COMMAND ${CMAKE_COMMAND} -E copy
+#         ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/CubeCoreProject.exe
+#         ${CMAKE_BINARY_DIR}/CubeCoreProject.exe
+#         COMMENT "Copying executable to output directory"
+#     )
+# endif()
+
+install(TARGETS CubeCoreProject)
