Work begins on menus. Reorganize some stuff.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,7 +87,8 @@
         "xutility": "cpp",
         "condition_variable": "cpp",
         "mutex": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "codecvt": "cpp"
     },
     "cSpell.words": [
         "CHARACTERMANAGER",
