--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -88,7 +88,8 @@
         "condition_variable": "cpp",
         "mutex": "cpp",
         "filesystem": "cpp",
-        "codecvt": "cpp"
+        "codecvt": "cpp",
+        "xstddef": "cpp"
     },
     "cSpell.words": [
         "CHARACTERMANAGER",
