--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,11 @@ if(NOT EXISTS ${ARGPARSE_HEADER})
     )
 endif()
 
+# Add SQLiteCpp
+set(SQLITECPP_RUN_CPPCHECK OFF CACHE BOOL "" FORCE)
+set(SQLITECPP_RUN_CPPLINT OFF CACHE BOOL "" FORCE)
+add_subdirectory(${CMAKE_SOURCE_DIR}/libraries/SQLiteCpp)
+
 include_directories(${CMAKE_SOURCE_DIR}/src/logger)
 include_directories(${CMAKE_SOURCE_DIR}/libraries)
 include_directories(${CMAKE_SOURCE_DIR}/src/settings)
@@ -109,14 +114,40 @@ file(MAKE_DIRECTORY ${FONTS_DEST_DIR})
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/**/*.cpp" "src/**/**/*.cpp")
 add_executable(CubeCore ${SOURCES})
 
-target_link_libraries(CubeCore PRIVATE sfml-graphics sfml-audio sfml-network rtaudio ${ALSA_LIBRARIES} ${FREETYPE_LIBRARY} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} nlohmann_json::nlohmann_json)
+target_link_libraries(CubeCore PRIVATE 
+    sfml-graphics 
+    sfml-audio 
+    sfml-network 
+    rtaudio 
+    ${ALSA_LIBRARIES} 
+    ${FREETYPE_LIBRARY} 
+    ${OPENGL_LIBRARIES} 
+    ${GLEW_LIBRARIES} 
+    nlohmann_json::nlohmann_json
+    SQLiteCpp
+    sqlite3
+)
 target_compile_features(CubeCore PRIVATE cxx_std_17)
 
 # Include directories
 if(WIN32)
-    target_include_directories(CubeCore PRIVATE ${RTAUDIO_INCLUDE_DIR} ${PROJECT_SOURCE_DIR}/src/libs ${FREETYPE_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${SFML_INCLUDE_DIR} "C:/Users/Andrew/Documents/glm-1.0.1-light")
+    target_include_directories(CubeCore PRIVATE 
+        ${RTAUDIO_INCLUDE_DIR} 
+        ${PROJECT_SOURCE_DIR}/src/libs 
+        ${FREETYPE_INCLUDE_DIRS} 
+        ${OPENGL_INCLUDE_DIRS} 
+        ${GLEW_INCLUDE_DIRS} 
+        ${SFML_INCLUDE_DIR} 
+        "C:/Users/Andrew/Documents/glm-1.0.1-light"
+    )
 else()
-    target_include_directories(CubeCore PRIVATE ${PROJECT_SOURCE_DIR}/src/libs ${FREETYPE_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${SFML_INCLUDE_DIR})
+    target_include_directories(CubeCore PRIVATE 
+        ${PROJECT_SOURCE_DIR}/src/libs 
+        ${FREETYPE_INCLUDE_DIRS} 
+        ${OPENGL_INCLUDE_DIRS} 
+        ${GLEW_INCLUDE_DIRS} 
+        ${SFML_INCLUDE_DIR}
+    )
 endif()
 
 # Add a custom command to copy the shaders directory 
@@ -171,7 +202,21 @@ FetchContent_MakeAvailable(googletest)
 # Add tests
 file(GLOB_RECURSE TEST_SOURCES "tests/*.cpp" "tests/**/*.cpp" "tests/**/**/*.cpp")
 add_executable(CubeCoreTests ${TEST_SOURCES})
-target_link_libraries(CubeCoreTests PRIVATE gtest gtest_main sfml-graphics sfml-audio sfml-network rtaudio ${ALSA_LIBRARIES} ${FREETYPE_LIBRARY} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} nlohmann_json::nlohmann_json)
+target_link_libraries(CubeCoreTests PRIVATE 
+    gtest 
+    gtest_main 
+    sfml-graphics 
+    sfml-audio 
+    sfml-network 
+    rtaudio 
+    ${ALSA_LIBRARIES} 
+    ${FREETYPE_LIBRARY} 
+    ${OPENGL_LIBRARIES} 
+    ${GLEW_LIBRARIES} 
+    nlohmann_json::nlohmann_json
+    SQLiteCpp
+    sqlite3
+)
 
 enable_testing()
 add_test(NAME CubeCoreTests COMMAND CubeCoreTests)
