--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ cmake_minimum_required(VERSION 3.16)
 # Project name and the language used
 project(CubeCore VERSION 1.0 LANGUAGES CXX)
 
+# set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE "ON" FORCE)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
