--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,7 +39,6 @@ FetchContent_Declare(SFML
 FetchContent_MakeAvailable(SFML)
 include(FetchContent)
 
-
 if(WIN32)
     # Settings for Windows
     set(RTAUDIO_API_DS ON CACHE BOOL "" FORCE)
@@ -53,6 +52,7 @@ elseif(UNIX)
     set(RTAUDIO_API_OSS OFF CACHE BOOL "" FORCE)
     set(RTAUDIO_API_PULSE OFF CACHE BOOL "" FORCE)
 endif()
+
 FetchContent_Declare(
     rtaudio
     GIT_REPOSITORY https://github.com/thestk/rtaudio.git
@@ -60,11 +60,13 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(rtaudio)
 FetchContent_GetProperties(rtaudio)
+
 if(NOT rtaudio_POPULATED)
-  FetchContent_Populate(rtaudio)
-  # Add the RtAudio subdirectory with the new configuration
-  add_subdirectory(${rtaudio_SOURCE_DIR} ${rtaudio_BINARY_DIR})
-  include_directories(${rtaudio_SOURCE_DIR})
+    FetchContent_Populate(rtaudio)
+
+    # Add the RtAudio subdirectory with the new configuration
+    add_subdirectory(${rtaudio_SOURCE_DIR} ${rtaudio_BINARY_DIR})
+    include_directories(${rtaudio_SOURCE_DIR})
 endif()
 
 # Create libraries directory if it doesn't exist
@@ -72,20 +74,25 @@ file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/libraries)
 
 # Download httplib.h if not already downloaded
 set(HTTPLIB_HEADER ${CMAKE_SOURCE_DIR}/libraries/httplib.h)
+
 if(NOT EXISTS ${HTTPLIB_HEADER})
     file(DOWNLOAD
         https://raw.githubusercontent.com/yhirose/cpp-httplib/master/httplib.h
         ${HTTPLIB_HEADER}
     )
 endif()
+
 set(ARGPARSE_HEADER ${CMAKE_SOURCE_DIR}/libraries/argparse.hpp)
+
 if(NOT EXISTS ${ARGPARSE_HEADER})
     file(DOWNLOAD
         https://raw.githubusercontent.com/p-ranav/argparse/master/include/argparse/argparse.hpp
         ${ARGPARSE_HEADER}
     )
 endif()
+
 set(TINY_OBJ_LOADER_HEADER ${CMAKE_SOURCE_DIR}/libraries/tiny_obj_loader.h)
+
 if(NOT EXISTS ${TINY_OBJ_LOADER_HEADER})
     file(DOWNLOAD
         https://raw.githubusercontent.com/tinyobjloader/tinyobjloader/50461d0e0a77c178bb478e9319d7de82f469a848/tiny_obj_loader.h
@@ -95,6 +102,7 @@ endif()
 
 # Add libsodium
 add_definitions(-DSODIUM_STATIC)
+
 if(WIN32)
     include_directories(${CMAKE_SOURCE_DIR}/libraries/libsodium/include)
     find_library(SODIUM_LIBRARIES libsodium HINTS "${CMAKE_SOURCE_DIR}/libraries/libsodium/Win32/Release/v143/*" "${CMAKE_SOURCE_DIR}/libraries/libsodium/Win32/Debug/v143/*")
@@ -113,12 +121,14 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 include_directories(${CMAKE_SOURCE_DIR}/src/logger)
 include_directories(${CMAKE_SOURCE_DIR}/libraries)
 include_directories(${CMAKE_SOURCE_DIR}/src/settings)
+
 if(WIN32)
     include_directories("C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.39.33519/include")
 endif()
 
 # Define the source and destination directories for shaders
 set(SHADER_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/gui/shaders")
+
 if(WIN32)
     set(SHADER_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/shaders")
 else()
@@ -127,6 +137,7 @@ endif()
 
 # Define the source and destination directories for meshes
 set(MESHES_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/gui/renderables/meshes/meshFiles")
+
 if(WIN32)
     set(MESHES_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/meshes")
 else()
@@ -135,6 +146,7 @@ endif()
 
 # Define the source and destination directories for fonts
 set(FONTS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/fonts")
+
 if(WIN32)
     set(FONTS_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/fonts")
 else()
@@ -142,6 +154,7 @@ else()
 endif()
 
 set(HTTP_SOURCE_DIR "${CMAKE_SOURCE_DIR}/http")
+
 if(WIN32)
     set(HTTP_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/http")
 else()
@@ -159,15 +172,15 @@ file(GLOB_RECURSE SOURCES "src/*.cpp" "src/**/*.cpp" "src/**/**/*.cpp")
 add_executable(CubeCore ${SOURCES})
 
 # Link libraries
-target_link_libraries(CubeCore PRIVATE 
-    sfml-graphics 
-    sfml-audio 
-    sfml-network 
-    rtaudio 
-    ${ALSA_LIBRARIES} 
-    ${FREETYPE_LIBRARY} 
-    ${OPENGL_LIBRARIES} 
-    ${GLEW_LIBRARIES} 
+target_link_libraries(CubeCore PRIVATE
+    sfml-graphics
+    sfml-audio
+    sfml-network
+    rtaudio
+    ${ALSA_LIBRARIES}
+    ${FREETYPE_LIBRARY}
+    ${OPENGL_LIBRARIES}
+    ${GLEW_LIBRARIES}
     nlohmann_json::nlohmann_json
     SQLiteCpp
     sqlite3
@@ -177,26 +190,26 @@ target_compile_features(CubeCore PRIVATE cxx_std_17)
 
 # Include directories
 if(WIN32)
-    target_include_directories(CubeCore PRIVATE 
-        ${RTAUDIO_INCLUDE_DIR} 
-        ${PROJECT_SOURCE_DIR}/src/libs 
-        ${FREETYPE_INCLUDE_DIRS} 
-        ${OPENGL_INCLUDE_DIRS} 
-        ${GLEW_INCLUDE_DIRS} 
-        ${SFML_INCLUDE_DIR} 
+    target_include_directories(CubeCore PRIVATE
+        ${RTAUDIO_INCLUDE_DIR}
+        ${PROJECT_SOURCE_DIR}/src/libs
+        ${FREETYPE_INCLUDE_DIRS}
+        ${OPENGL_INCLUDE_DIRS}
+        ${GLEW_INCLUDE_DIRS}
+        ${SFML_INCLUDE_DIR}
         "C:/Users/Andrew/Documents/glm-1.0.1-light"
     )
 else()
-    target_include_directories(CubeCore PRIVATE 
-        ${PROJECT_SOURCE_DIR}/src/libs 
-        ${FREETYPE_INCLUDE_DIRS} 
-        ${OPENGL_INCLUDE_DIRS} 
-        ${GLEW_INCLUDE_DIRS} 
+    target_include_directories(CubeCore PRIVATE
+        ${PROJECT_SOURCE_DIR}/src/libs
+        ${FREETYPE_INCLUDE_DIRS}
+        ${OPENGL_INCLUDE_DIRS}
+        ${GLEW_INCLUDE_DIRS}
         ${SFML_INCLUDE_DIR}
     )
 endif()
 
-# Add a custom command to copy the shaders directory 
+# Add a custom command to copy the shaders directory
 add_custom_command(
     TARGET CubeCore POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E copy_directory
@@ -212,6 +225,15 @@ add_custom_command(
     ${MESHES_SOURCE_DIR}
     ${MESHES_DEST_DIR}
     COMMAND ${CMAKE_COMMAND} -E echo "Copying meshess to output directory"
+)
+
+# Add a custom command to copy black_and_white.mtl from the meshFiles directory to the output directory
+add_custom_command(
+    TARGET CubeCore POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
+    ${MESHES_SOURCE_DIR}/black_and_white.mtl
+    ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
+    COMMAND ${CMAKE_COMMAND} -E echo "Copying black_and_white.mtl to output directory"
 )
 
 # Add a custom command to copy the fonts directory
@@ -247,17 +269,17 @@ FetchContent_MakeAvailable(googletest)
 # Add test executable
 file(GLOB_RECURSE TEST_SOURCES "tests/*.cpp" "tests/**/*.cpp" "tests/**/**/*.cpp")
 add_executable(CubeCoreTests ${TEST_SOURCES})
-target_link_libraries(CubeCoreTests PRIVATE 
-    gtest 
-    gtest_main 
-    sfml-graphics 
-    sfml-audio 
-    sfml-network 
-    rtaudio 
-    ${ALSA_LIBRARIES} 
-    ${FREETYPE_LIBRARY} 
-    ${OPENGL_LIBRARIES} 
-    ${GLEW_LIBRARIES} 
+target_link_libraries(CubeCoreTests PRIVATE
+    gtest
+    gtest_main
+    sfml-graphics
+    sfml-audio
+    sfml-network
+    rtaudio
+    ${ALSA_LIBRARIES}
+    ${FREETYPE_LIBRARY}
+    ${OPENGL_LIBRARIES}
+    ${GLEW_LIBRARIES}
     nlohmann_json::nlohmann_json
     SQLiteCpp
     sqlite3
