--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -136,20 +136,12 @@ else()
 endif()
 
 # Define the source and destination directories for meshes
-set(MESHES_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/gui/renderables/meshes/meshFiles")
+set(MESHES_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/gui/renderables/meshes")
 
 if(WIN32)
     set(MESHES_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/meshes")
 else()
     set(MESHES_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/meshes")
-endif()
-
-set(ANIMATIONS_SOURCE_DIR "${CMAKE_SOURCE_DIR}/src/gui/renderables/meshes/animations")
-
-if(WIN32)
-    set(ANIMATIONS_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/animations")
-else()
-    set(ANIMATIONS_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/animations")
 endif()
 
 # Define the source and destination directories for fonts
@@ -232,6 +224,9 @@ add_custom_command(
     COMMAND ${CMAKE_COMMAND} -E echo "Copying shaders to output directory"
 )
 
+# create the meshes directory if it doesn't exist
+file(MAKE_DIRECTORY ${MESHES_DEST_DIR})
+
 # Add a custom command to copy the meshes directory
 add_custom_command(
     TARGET CubeCore POST_BUILD
@@ -239,18 +234,6 @@ add_custom_command(
     ${MESHES_SOURCE_DIR}
     ${MESHES_DEST_DIR}
     COMMAND ${CMAKE_COMMAND} -E echo "Copying meshess to output directory"
-)
-
-# Create the animations directory if it doesn't exist
-file(MAKE_DIRECTORY ${ANIMATIONS_DEST_DIR})
-
-# Add a custom command to copy the animations directory
-add_custom_command(
-    TARGET CubeCore POST_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_directory
-    ${ANIMATIONS_SOURCE_DIR}
-    ${ANIMATIONS_DEST_DIR}
-    COMMAND ${CMAKE_COMMAND} -E echo "Copying animations to output directory"
 )
 
 # Add a custom command to copy black_and_white.mtl from the meshFiles directory to the output directory
