--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,11 +109,14 @@ if(NOT EXISTS ${TINY_OBJ_LOADER_HEADER})
 endif()
 
 # Add libsodium
-add_definitions(-DSODIUM_STATIC)
+# add_definitions(-DSODIUM_STATIC)
 
 if(WIN32)
     include_directories(${CMAKE_SOURCE_DIR}/libraries/libsodium/include)
     find_library(SODIUM_LIBRARIES libsodium HINTS "${CMAKE_SOURCE_DIR}/libraries/libsodium/x64/Release/v143/*" "${CMAKE_SOURCE_DIR}/libraries/libsodium/x64/Debug/v143/*")
+    if(NOT SODIUM_LIBRARIES)
+        message(FATAL_ERROR "libsodium library not found")
+    endif()
 else()
     find_package(PkgConfig REQUIRED)
     pkg_check_modules(SODIUM REQUIRED libsodium)
@@ -333,5 +336,5 @@ if(benchmark_FOUND)
     )
 else()
     message(WARNING "Google Benchmark not found, skipping benchmarks.")
-    message(WARNING "To build benchmarks, insstall Google Benchmark and re-run CMake.")
+    message(WARNING "To build benchmarks, install Google Benchmark and re-run CMake.")
 endif()
