Changed direction on BT. going to use secondary app to interface with BT.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,11 +186,19 @@ else()
     set(MTL_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 endif()
 
+if(WIN32)
+    set(DATA_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/Debug/data")
+else()
+    set(DATA_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/data")
+endif()
+
 # Create the destination directories if they don't exist
 file(MAKE_DIRECTORY ${SHADER_DEST_DIR})
 file(MAKE_DIRECTORY ${MESHES_DEST_DIR})
 file(MAKE_DIRECTORY ${FONTS_DEST_DIR})
 file(MAKE_DIRECTORY ${HTTP_DEST_DIR})
+file(MAKE_DIRECTORY ${MTL_DEST_DIR})
+file(MAKE_DIRECTORY ${DATA_DEST_DIR})
 
 # Add executable
 file(GLOB_RECURSE SOURCES "src/*.cpp" "src/**/*.cpp" "src/**/**/*.cpp")
@@ -341,6 +349,14 @@ add_custom_command(
     ${HTTP_SOURCE_DIR}
     ${HTTP_DEST_DIR}
     COMMAND ${CMAKE_COMMAND} -E echo "Copying http to output directory"
+)
+
+add_custom_command(
+    TARGET CubeCore POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy_directory
+    ${CMAKE_SOURCE_DIR}/data
+    ${DATA_DEST_DIR}
+    COMMAND ${CMAKE_COMMAND} -E echo "Copying data to output directory"
 )
 
 # Define path to the build number file
